# todo-bench

./: .env  Cargo.toml  Rocket.toml
db/migrations/: 20221214_create_todo_table.sql
src/: main.rs  models.rs
templates/: err.html.hbs  home.html.hbs
